--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -1,10 +1,26 @@
 .nav-container {
   height: 100%;
+  .active {
+    background-color: #00796b;
+    color: white;
+  }
 }
 
 .logo-container {
   display: inline-block;
   padding-right: 16px;
+}
+
+.active.mat-menu-item {
+  background-color: #00796b !important;
+  color: white !important;
+}
+
+::ng-deep.nav-buttons {
+  .mat-button,
+  .mat-icon-button {
+    font-size: 0.8em;
+  }
 }
 
 .logo {
@@ -34,9 +50,20 @@
 }
 
 .github-logo {
+  width: 50px;
+  height: auto;
+  display: inline-block;
+  vertical-align: text-top;
+  margin-right: 12px;
+  margin-left: 12px;
 }
 
 .github-logo img {
   width: 60px;
   height: auto;
+  vertical-align: text-bottom;
+}
+
+.player-text {
+  font-size: 0.8em;
 }
