--- a/src/app/shared/containers/layout/layout.component.html
+++ b/src/app/shared/containers/layout/layout.component.html
@@ -6,7 +6,7 @@
   fxLayoutGap="0.5%"
   fxLayoutAlign="center"
 >
-  <app-navigation fxFlex="100%">
+  <app-navigation [playerName]="playerName" fxFlex="100%">
     <ng-content></ng-content>
     <!-- <app-footer [socialLinks]="socialLinks"></app-footer> -->
   </app-navigation>
