createt game ladder module, added tests for rps-game.component and rps-game.service

--- a/src/app/shared/components/navigation/navigation.component.html
+++ b/src/app/shared/components/navigation/navigation.component.html
@@ -34,7 +34,10 @@
       <a mat-button [routerLink]="['game']" [routerLinkActive]="'active'"
         >Game</a
       >
-      <a mat-button [routerLink]="['ladder']" [routerLinkActive]="'active'"
+      <a
+        mat-button
+        [routerLink]="['ladder', 'players']"
+        [routerLinkActive]="'active'"
         >Ladder</a
       >
     </div>
