--- a/src/app/shared/components/side-nav/side-nav.component.html
+++ b/src/app/shared/components/side-nav/side-nav.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #snav [mode]="side" closed fixedTopGap="56">
+  <mat-sidenav #snav [mode]="'side'" closed fixedTopGap="56">
     <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="header-image"></div>
